Fri May 30 20:29:11 2003  Douglas C. Schmidt  <schmidt@ace.cs.wustl.edu>

	* docs/configurations.html: Fixed a typo where we claimed
	  the leader/followers model was the default ORB concurrency
 	  configuration.  Thanks to Dave Ryan <djryan@raytheon.com> for
 	  detecting this.

Fri May 30 13:56:33 2003  Balachandran Natarajan  <bala@dre.vanderbilt.edu>

	* Makefile: Added a new target 'releaseall'. Please see
	  the entry "Fri May 30 13:52:49 2003  Balachandran Natarajan
	  <bala@dre.vanderbilt.edu>" in $ACE_ROOT/ChangeLog  for the
	  motivation. 

Fri May 30 13:06:02 2003  Pradeep Gore  <pradeep@oomworks.com>

	* orbsvcs/orbsvcs/Notify/RT_Notify_Service.h:
	* orbsvcs/orbsvcs/Notify/RT_Notify_Service.cpp:
	
	  Overloaded base virtual <init> method to silence HPUX11 build warning.
	
Thu May 29 22:24:02 2003  Krishnakumar B  <kitty@spam.invalid.domain>

        * TAOACE.dsw:

          Modified the dependencies to allow building with the new ACEXML
          libraries.

Thu May 29 19:19:30 2003  Balachandran Natarajan  <bala@cs.wustl.edu>

	* tao/CONV_FRAMEC.cpp:
	* tao/DynamicC.cpp:
	* tao/PolicyC.cpp:
	* tao/Tagged_Components.cpp: Fixed duplicate symbols errors in
	  SunCC builds.

Thu May 29 18:47:59 2003  Balachandran Natarajan  <bala@dre.vanderbilt.edu>

	* tao/ObjectKey_Table.cpp: Another cosmetic change.

Thu May 29 16:46:51 2003  Balachandran Natarajan  <bala@dre.vanderbilt.edu>

	* rules.tao.GNU: Reverted the change "Thu May 29 14:30:57 UTC 2003
	  Gary Duzan <gduzan@bbn.com> , Craig Rodrigues
	  <crodrigu@bbn.com>" since it breaks parallel builds.

Thu May 29 11:12:28 2003  Jeff Parsons <j.parsons@vanderbilt.edu>

        * TAO_IDL/ast/ast_decl.cpp:

          Fixed mechanism that recursively sets the prefix for scope
          members when 'typeprefix' is seen in a scope.

Thu May 29 14:30:57 UTC 2003  Gary Duzan <gduzan@bbn.com>
                              Craig Rodrigues  <crodrigu@bbn.com>

	* rules.tao.GNU: